Se agrega funcionalidad para agregar de la lista de platillos a una orden

--- a/src/client/css/style.css
+++ b/src/client/css/style.css
@@ -341,7 +341,6 @@ header.top h3:after {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
-  overflow: scroll;
 }
 .catch-of-the-day > *:first-child {
   -ms-flex-negative: 1;
@@ -440,7 +439,7 @@ ul.order li span.count span {
 .order-title {
   text-align: center;
 }
-.fish-edit {
+.dish-edit {
   margin-bottom: 20px;
   border: 2px solid #000;
   overflow: hidden;
@@ -450,9 +449,9 @@ ul.order li span.count span {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-.fish-edit input,
-.fish-edit textarea,
-.fish-edit select {
+.dish-edit input,
+.dish-edit textarea,
+.dish-edit select {
   width: 33.33%;
   padding: 10px;
   line-height: 1;
@@ -466,23 +465,23 @@ ul.order li span.count span {
   border-radius: 0;
   background: #fff;
 }
-.fish-edit input:focus,
-.fish-edit textarea:focus,
-.fish-edit select:focus {
+.dish-edit input:focus,
+.dish-edit textarea:focus,
+.dish-edit select:focus {
   outline: 0;
   background: #fef2de;
 }
-.fish-edit textarea {
+.dish-edit textarea {
   width: 100%;
 }
-.fish-edit input:last-of-type {
+.dish-edit input:last-of-type {
   width: 100%;
 }
-.fish-edit button {
+.dish-edit button {
   width: 100%;
   border: 0;
 }
-.list-of-fish {
+.list-of-dish {
   border-top: 2px solid #000;
   border-bottom: 1px solid #000;
   padding-top: 5px;
@@ -490,7 +489,7 @@ ul.order li span.count span {
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
 }
-.menu-fish {
+.menu-dish {
   border-bottom: 2px solid #000;
   border-top: 1px solid #000;
   padding-bottom: 2rem;
@@ -499,11 +498,11 @@ ul.order li span.count span {
   clear: both;
   overflow: hidden;
 }
-.menu-fish p {
+.menu-dish p {
   margin: 0;
   font-size: 1.8rem;
 }
-.menu-fish .fish-name {
+.menu-dish .dish-name {
   margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -515,13 +514,13 @@ ul.order li span.count span {
       -ms-flex-align: center;
           align-items: center;
 }
-.menu-fish .price {
+.menu-dish .price {
   font-size: 1.4rem;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
-.menu-fish img {
+.menu-dish img {
   float: left;
   width: 150px;
   margin-right: 1rem;
@@ -646,5 +645,5 @@ input[type=submit].twitter:after {
 }
 
 .menu {
-  overflow: hidden;
+  overflow-x: hidden;
 }
